Fixed linux install; refactored PowerShell installation and execution paths for Atomic Red Team
**Added:**
- Added variables for PowerShell version and installation path.
- Included common, Debian-specific, and RedHat-specific package lists for installation.

**Changed:**
- Refactored PowerShell installation to use a generic approach with architecture mapping.
- Updated `invoke-atomictest.yml` to use the `pwsh` command without absolute paths.
- Simplified `setup-linux.yml` to streamline PowerShell setup and remove old installation methods.

**Removed:**
- Removed old PowerShell installation tasks specific to Ubuntu, Amazon Linux, and CentOS.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,3 +39,7 @@ banned_tids_windows:
 art_tids_linux: []
 art_tids_macos: []
 art_tids_windows: []
+
+# PowerShell version to install (if needed)
+atomic_red_team_pwsh_version: "7.4.1"
+atomic_red_team_nix_pwsh_path: "/opt/microsoft/powershell/7"
