--- a/tasks/invoke-atomictest.yml
+++ b/tasks/invoke-atomictest.yml
@@ -45,7 +45,7 @@
             cmd: |
               Invoke-AtomicTest {{ testarg }} -CheckPrereqs
           args:
-            executable: /usr/bin/pwsh
+            executable: pwsh
           register: check_prereqs
           failed_when: '"Prerequisites not met:" in check_prereqs.stdout'
           changed_when: false
@@ -55,23 +55,25 @@
             cmd: |
               Invoke-AtomicTest {{ testarg }} -GetPrereqs
           args:
-            executable: /usr/bin/pwsh
+            executable: pwsh
           register: get_prereqs
           ignore_errors: true
+          changed_when: true
 
-        - name: "Debug prereqs {{ item }}"
+        - name: Debug prereqs {{ item }}
           ansible.builtin.debug:
-            var: get_prereqs.stdout
-          when: get_prereqs.changed
+            var: "{{ item }}"
+          loop: "{{ prereqs }}"
 
     - name: "Execute {{ item }}"
       ansible.builtin.shell:
         cmd: |
           Invoke-AtomicTest {{ testarg }} -Confirm:$false -TimeoutSeconds 300 -ExecutionLogPath /root/atc_execution.csv
       args:
-        executable: /usr/bin/pwsh
+        executable: pwsh
       register: execute_test
       ignore_errors: true
+      changed_when: false
 
     - name: "Execute {{ item }}"
       ansible.builtin.debug:
@@ -82,9 +84,10 @@
         cmd: |
           Invoke-AtomicTest {{ testarg }} -Cleanup
       args:
-        executable: /usr/bin/pwsh
+        executable: pwsh
       register: cleanup_test
       ignore_errors: true
+      changed_when: false
 
     - name: "Cleanup {{ item }}"
       ansible.builtin.debug:
@@ -108,11 +111,12 @@
             Invoke-AtomicTest {{ testarg }} -GetPrereqs
           register: get_prereqs
           ignore_errors: true
+          changed_when: false
+          notify: debug_prereqs
 
-        - name: "Debug prereqs {{ item }}"
-          ansible.builtin.debug:
-            var: get_prereqs.stdout
-          when: get_prereqs.changed
+        - name: Debug prereqs {{ item }}
+          ansible.builtin.meta: debug
+          with_items: "{{ prereqs }}"
 
     - name: "Execute {{ item }}"
       ansible.windows.win_shell: |
