--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,1 +1,14 @@
 ---
+atomic_red_team_common_install_packages:
+  - wget
+
+atomic_red_team_debian_specific_packages:
+  - apt-transport-https
+  - ca-certificates
+  - curl
+  - libunwind8
+  - software-properties-common
+  - wget
+
+atomic_red_team_redhat_specific_packages:
+  - libicu
