--- a/example-playbook.yml
+++ b/example-playbook.yml
@@ -37,7 +37,7 @@
         art_tids_windows:
           # https://thedfirreport.com/2022/08/08/bumblebee-roasts-its-way-to-domain-admin/
           - T1553.005:c2587b8d-743d-4985-aa50-c83394eaeb68 # download and mount iso, run lnk
-          - T1016 # System Network Configurration Discovery - 8 tests
+          - T1016 # System Network Configuration Discovery - 8 tests
           - T1057 # Process Discovery - 5 tests
           - T1219-2 # Install Anydesk
           - T1087.002-5,6,7,8 # Account Discovery(domain)
