Add magefiles; linted code and fixed non-idiomatic practices
**Added:**

- Added magefiles directory with Magefile utilities for automation.
- Added documentation generation for Magefile utilities in magefiles/README.md.
- Introduced new variables with `ansible_atomic_red_team_` prefix for
  consistency and to avoid conflicts.

**Changed:**

- Updated README.md to improve readability and structure.
- Renamed variables in tasks and defaults to use `ansible_atomic_red_team_`
  prefix.
- Modified molecule/default/verify.yml to use `ansible.builtin.command`
  instead of `ansible.builtin.shell` where applicable and added `changed_when: false`
  for idempotency.
- Updated gather-art-tids.yml and setup-* tasks to use the new variable names.

**Removed:**

- Removed unnecessary `wget` from `atomic_red_team_debian_specific_packages`.

--- a/example-playbook.yml
+++ b/example-playbook.yml
@@ -17,7 +17,7 @@
           become: true
       when: ansible_system == 'Linux'
       vars:
-        art_tids_linux:
+        ansible_atomic_red_team_tids_linux:
           - T1136.001
           - T1053.003
           - T1003.008-1,2,3
@@ -34,7 +34,7 @@
           become: false
       when: ansible_system == 'Win32NT'
       vars:
-        art_tids_windows:
+        ansible_atomic_red_team_tids_windows:
           # https://thedfirreport.com/2022/08/08/bumblebee-roasts-its-way-to-domain-admin/
           - T1553.005:c2587b8d-743d-4985-aa50-c83394eaeb68 # download and mount iso, run lnk
           - T1016 # System Network Configuration Discovery - 8 tests
