--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
   block:
     - name: Built list of ART TIDs
       ansible.builtin.include_tasks: "gather-art-tids.yml"
-      when: not disable_fetch_art_index
+      when: not ansible_atomic_red_team_disable_fetch_art_index
 
     - name: Load the ART TIDs
       ansible.builtin.include_vars: "{{ playbook_dir }}/art-tids.yml"
@@ -24,12 +24,12 @@
 
 - name: Run invoke-atomictest on each TID (linux)
   ansible.builtin.include_tasks: invoke-atomictest.yml
-  loop: "{{ art_tids_linux | difference(banned_tids_linux) }}"
+  loop: "{{ ansible_atomic_red_team_tids_linux | difference(ansible_atomic_red_team_banned_tids_linux) }}"
   when:
     - ansible_system == 'Linux'
 
 - name: Run invoke-atomictest on each TID (windows)
   ansible.builtin.include_tasks: invoke-atomictest.yml
-  loop: "{{ art_tids_windows | difference(banned_tids_windows) }}"
+  loop: "{{ ansible_atomic_red_team_tids_windows | difference(ansible_atomic_red_team_banned_tids_windows) }}"
   when:
     - ansible_system == 'Win32NT'
