Improved Atomic Red Team role with better test execution and variable management
**Added:**
- Added `ansible_atomic_red_team_execute` variable to control execution of ART tests.
- Added `ansible_atomic_red_team_timeout` variable to set timeout for each test.
- Added verification tasks in `molecule/default/verify.yml` to check if emergency bash script and `art-tids.yml` are properly generated and contain expected TIDs.
- Added a task to create a temporary directory for storing ART TIDs and emergency script.
- Added a task to copy the emergency bash script to the temporary directory.
- Added installation of Invoke-AtomicRedTeam in `tasks/setup-linux.yml`.
- Added modification of PowerShell profile to include Invoke-AtomicRedTeam module.

**Changed:**
- Updated `ansible_atomic_red_team_banned_tids_linux` to include T1562.001.
- Renamed `vars/update-art-tids.sh` to `files/update-art-tids.sh`.
- Updated `molecule/default/converge.yml` to set `ansible_atomic_red_team_execute` to true for testing.
- Refactored `tasks/gather-art-tids.yml` to use the temporary directory for storing `art-tids.yml`.
- Updated `tasks/invoke-atomictest.yml` to set a fact when prerequisites check passes and to conditionally execute the test based on this fact.
- Refactored `tasks/main.yml` to include ART TIDs gathering and test execution in a block conditional on `ansible_atomic_red_team_execute`.

**Fixed:**
- Fixed issue with temporary directory creation and usage in ART TIDs gathering and emergency script copying tasks.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,3 +11,5 @@
   roles:
     - name: Run the atomic-red-team role
       role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+      vars:
+        ansible_atomic_red_team_execute: true
