--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,7 @@ ansible_atomic_red_team_banned_tids_linux:
   - T1526     # Azure
   - T1529     # reboot/shutdown
   - T1530     # cloud
+  - T1562.001 # breaks the tests
   - T1562.006 # auditd changes (may break some telemetry collection)
   - T1562.008 # cloud logging changes
   - T1574.006 # Dynamic Linker Hijacking (requires manual cleanup / testing - might break subsequent tests)
@@ -40,6 +41,12 @@ ansible_atomic_red_team_tids_linux: []
 ansible_atomic_red_team_tids_macos: []
 ansible_atomic_red_team_tids_windows: []
 
+# Execute the ART tests
+ansible_atomic_red_team_execute: false
+
 # PowerShell version to install (if needed)
 ansible_atomic_red_team_pwsh_version: "7.4.1"
 ansible_atomic_red_team_nix_pwsh_path: "/opt/microsoft/powershell/7"
+
+# Timeout in seconds for each test
+ansible_atomic_red_team_timeout: 20
