--- a/tasks/gather-art-tids.yml
+++ b/tasks/gather-art-tids.yml
@@ -3,9 +3,26 @@
   ansible.builtin.set_fact:
     index_csv_url: "https://github.com/{{ ansible_atomic_red_team_repository_owner }}/atomic-red-team/raw/{{ ansible_atomic_red_team_branch }}/atomics/Indexes/Indexes-CSV/"
 
+- name: Create temporary directory
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: build
+  delegate_to: localhost
+  register: art_tids
+  when: not ansible_atomic_red_team_disable_fetch_art_index
+
+- name: Copy emergency bash script
+  ansible.builtin.copy:
+    src: "update-art-tids.sh"
+    dest: "{{ art_tids.path }}/update-art-tids.sh"
+    mode: '0755'
+  delegate_to: localhost
+  become: false
+  when: not ansible_atomic_red_team_disable_fetch_art_index
+
 - name: Gather and write art-tids.yml
   ansible.builtin.blockinfile:
-    dest: "{{ playbook_dir }}/art-tids.yml"
+    dest: "{{ art_tids.path }}/art-tids.yml"
     create: true
     mode: "0644"
     block: |
