--- a/tasks/gather-art-tids.yml
+++ b/tasks/gather-art-tids.yml
@@ -1,11 +1,28 @@
 ---
 - name: Set Indexes-CSV url
   ansible.builtin.set_fact:
-    index_csv_url: "https://github.com/{{ art_repository_owner }}/atomic-red-team/raw/{{ art_branch }}/atomics/Indexes/Indexes-CSV/"
+    index_csv_url: "https://github.com/{{ ansible_atomic_red_team_repository_owner }}/atomic-red-team/raw/{{ ansible_atomic_red_team_branch }}/atomics/Indexes/Indexes-CSV/"
+
+- name: Create temporary directory
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: build
+  delegate_to: localhost
+  register: art_tids
+  when: not ansible_atomic_red_team_disable_fetch_art_index
+
+- name: Copy emergency bash script
+  ansible.builtin.copy:
+    src: "update-art-tids.sh"
+    dest: "{{ art_tids.path }}/update-art-tids.sh"
+    mode: '0755'
+  delegate_to: localhost
+  become: false
+  when: not ansible_atomic_red_team_disable_fetch_art_index
 
 - name: Gather and write art-tids.yml
   ansible.builtin.blockinfile:
-    dest: "{{ playbook_dir }}/art-tids.yml"
+    dest: "{{ art_tids.path }}/art-tids.yml"
     create: true
     mode: "0644"
     block: |
@@ -18,7 +35,7 @@
       {%-   endif -%}
       {%- endfor -%}
       {#- build a dict with this for to_nice_yaml so it will indent correctly -#}
-      {%- set yamloutput = dict(art_tids_windows=list) -%}
+      {%- set yamloutput = dict(ansible_atomic_red_team_tids_windows=list) -%}
       {{ yamloutput | to_nice_yaml | indent(2) }}
       {%- set list = [] -%}
       {%- for line in lookup('ansible.builtin.url', index_csv_url + 'linux-index.csv', wantlist=True) -%}
@@ -28,8 +45,8 @@
       {%-     endif -%}
       {%-   endif -%}
       {%- endfor -%}
-      {%- set yamloutput = dict(art_tids_linux=list) -%}
+      {%- set yamloutput = dict(ansible_atomic_red_team_tids_linux=list) -%}
       {{ yamloutput | to_nice_yaml | indent(2) }}
   delegate_to: localhost
   become: false
-  when: not disable_fetch_art_index
+  when: not ansible_atomic_red_team_disable_fetch_art_index
