--- a/tasks/gather-art-tids.yml
+++ b/tasks/gather-art-tids.yml
@@ -1,7 +1,9 @@
 ---
 - name: Set Indexes-CSV url
   ansible.builtin.set_fact:
-    index_csv_url: "https://github.com/{{ ansible_atomic_red_team_repository_owner }}/atomic-red-team/raw/{{ ansible_atomic_red_team_branch }}/atomics/Indexes/Indexes-CSV/"
+    index_csv_url: >-
+      "https://github.com/{{ ansible_atomic_red_team_repository_owner }}/atomic-red-team/raw/
+      {{ ansible_atomic_red_team_branch }}/atomics/Indexes/Indexes-CSV/"
 
 - name: Create temporary directory
   ansible.builtin.tempfile:
