Minor lint fix: Broke up long URL string

--- a/tasks/gather-art-tids.yml
+++ b/tasks/gather-art-tids.yml
@@ -2,8 +2,13 @@
 - name: Set Indexes-CSV url
   ansible.builtin.set_fact:
     index_csv_url: >-
-      "https://github.com/{{ ansible_atomic_red_team_repository_owner }}/atomic-red-team/raw/
-      {{ ansible_atomic_red_team_branch }}/atomics/Indexes/Indexes-CSV/"
+      {{
+      'https://github.com/' +
+      ansible_atomic_red_team_repository_owner +
+      '/atomic-red-team/raw/' +
+      ansible_atomic_red_team_branch +
+      '/atomics/Indexes/Indexes-CSV/'
+      }}
 
 - name: Create temporary directory
   ansible.builtin.tempfile:
