Refactored Linux setup and updated banned TIDs for better test stability.
**Added:**

- Added T1552.001 to banned TIDs for Linux to prevent test breakage.
- PowerShell verification and setup task for clearer diagnostics in Linux setup.

**Changed:**

- Improved clarity and error handling in PowerShell setup tasks for Linux.
- Updated comments on banned TIDs for consistency and clarity.
- Replaced `ansible.builtin.shell` with `ansible.builtin.command` for
  PowerShell version check to adhere to best practices.
- Structured PowerShell setup and Invoke-ART installation into a single block
  to enhance readability and maintainability.

**Removed:**

- Removed old Invoke-ART task structure in favor of a more robust setup with
  detailed error logging and version verification.

--- a/tasks/setup-linux.yml
+++ b/tasks/setup-linux.yml
@@ -1,6 +1,19 @@
 ---
-- name: Install PowerShell on Linux
+- name: Setup PowerShell on Linux systems
+  when: ansible_system == 'Linux'
   block:
+    - name: Define default PowerShell package details
+      ansible.builtin.set_fact:
+        ps_arch_map: { x86_64: "x64", aarch64: "arm64" }
+        ps_pkg_name: "powershell-linux.tar.gz"
+        ps_download_url: "https://github.com/PowerShell/PowerShell/releases/download/v{{ ansible_atomic_red_team_pwsh_version }}/powershell-linux.tar.gz"
+
+    - name: Determine PowerShell package details
+      ansible.builtin.set_fact:
+        ps_pkg_name: "powershell-{{ ansible_atomic_red_team_pwsh_version }}-linux-{{ ps_arch_map[ansible_architecture] }}.tar.gz"
+        ps_download_url: "https://github.com/PowerShell/PowerShell/releases/download/v{{ ansible_atomic_red_team_pwsh_version }}/{{ ps_pkg_name }}"
+      when: ansible_architecture in ['x86_64', 'aarch64']
+
     - name: Install dependencies
       ansible.builtin.include_role:
         name: cowdogmoo.workstation.package_management
@@ -10,94 +23,87 @@
         package_management_redhat_specific_packages: "{{ ansible_atomic_red_team_redhat_specific_packages }}"
       when: ansible_os_family in ['Debian', 'RedHat']
 
-    - name: Set architecture mapping for PowerShell tar.gz packages
+    - name: Determine PowerShell package details
       ansible.builtin.set_fact:
-        ps_arch_map:
-          x86_64: x64
-          aarch64: arm64
-
-    - name: Set PowerShell package name based on architecture
-      ansible.builtin.set_fact:
+        ps_arch_map: { x86_64: "x64", aarch64: "arm64" }
         ps_pkg_name: "powershell-{{ ansible_atomic_red_team_pwsh_version }}-linux-{{ ps_arch_map[ansible_architecture] }}.tar.gz"
-      when: ansible_architecture in ps_arch_map
-
-    - name: Set PowerShell package download URL
-      ansible.builtin.set_fact:
         ps_download_url: "https://github.com/PowerShell/PowerShell/releases/download/v{{ ansible_atomic_red_team_pwsh_version }}/{{ ps_pkg_name }}"
-      when: ansible_architecture in ps_arch_map
+      when: ansible_architecture in ['x86_64', 'aarch64']
 
-    - name: Download PowerShell package
-      ansible.builtin.get_url:
-        url: "{{ ps_download_url }}"
-        dest: "/tmp/{{ ps_pkg_name }}"
-        mode: "0755"
-        owner: "{{ ansible_user_id }}"
-        group: "{{ ansible_user_id }}"
-      when: ps_pkg_name is defined
+    - name: Download and install PowerShell
+      block:
+        - name: Download PowerShell package
+          ansible.builtin.get_url:
+            url: "{{ ps_download_url }}"
+            dest: "/tmp/{{ ps_pkg_name }}"
+            mode: "0755"
+            owner: "{{ ansible_user_id }}"
+            group: "{{ ansible_user_id }}"
 
-    - name: Create PowerShell directory
-      become: true
-      ansible.builtin.file:
-        path: "{{ ansible_atomic_red_team_nix_pwsh_path }}"
-        state: directory
-        mode: "0755"
-        owner: "{{ ansible_user_id }}"
-        group: "{{ ansible_user_id }}"
-      when: ps_pkg_name is defined
+        - name: Create PowerShell installation directory
+          ansible.builtin.file:
+            path: "{{ ansible_atomic_red_team_nix_pwsh_path }}"
+            state: directory
+            mode: "0755"
+            owner: "{{ ansible_user_id }}"
+            group: "{{ ansible_user_id }}"
 
-    - name: Extract PowerShell tar.gz
-      become: true
-      ansible.builtin.unarchive:
-        src: "/tmp/{{ ps_pkg_name }}"
-        dest: "{{ ansible_atomic_red_team_nix_pwsh_path }}"
-        remote_src: true
-      when: ps_pkg_name is defined
+        - name: Extract PowerShell package
+          ansible.builtin.unarchive:
+            src: "/tmp/{{ ps_pkg_name }}"
+            dest: "{{ ansible_atomic_red_team_nix_pwsh_path }}"
+            remote_src: true
 
-    - name: Set execute permissions for pwsh
-      become: true
-      ansible.builtin.file:
-        path: "{{ ansible_atomic_red_team_nix_pwsh_path }}/pwsh"
-        mode: "+x"
-      when: ps_pkg_name is defined
+        - name: Set execute permissions for pwsh
+          ansible.builtin.file:
+            path: "{{ ansible_atomic_red_team_nix_pwsh_path }}/pwsh"
+            mode: "+x"
 
-    - name: Create symlink for pwsh
-      become: true
-      ansible.builtin.file:
-        src: "{{ ansible_atomic_red_team_nix_pwsh_path }}/pwsh"
-        dest: "/usr/bin/pwsh"
-        state: link
-      when: ps_pkg_name is defined
+        - name: Create symlink for pwsh
+          ansible.builtin.file:
+            src: "{{ ansible_atomic_red_team_nix_pwsh_path }}/pwsh"
+            dest: "/usr/bin/pwsh"
+            state: link
 
-- name: Install Invoke-ART
-  ansible.builtin.shell:
-    cmd: >
-      IEX (IWR 'https://raw.githubusercontent.com/redcanaryco/invoke-atomicredteam/master/install-atomicredteam.ps1'
-      -UseBasicParsing); Install-AtomicRedTeam -getAtomics -Force
-  args:
-    executable: pwsh
-    creates: "{{ ansible_user_dir }}/AtomicRedTeam/atomics/Indexes/index.yaml"
+        - name: Verify PowerShell installation
+          ansible.builtin.command: pwsh -Version
+          register: pwsh_version
+          failed_when: pwsh_version.rc != 0
+          changed_when: false
 
-- name: Find the path to the system powershell profile
-  ansible.builtin.shell:
-    cmd: |
-      $PROFILE.AllUsersAllHosts
-  args:
-    executable: pwsh
-  changed_when: false
-  register: pwshprofile
+    - name: Install Invoke-AtomicRedTeam
+      ansible.builtin.shell:
+        cmd: >
+          IEX (IWR 'https://raw.githubusercontent.com/redcanaryco/invoke-atomicredteam/master/install-atomicredteam.ps1' -UseBasicParsing);
+          Install-AtomicRedTeam -getAtomics -Force
+        executable: pwsh
+      register: art_install
+      failed_when: art_install.rc != 0
+      changed_when: true
+      ignore_errors: true
 
-- name: Powershell Profile (debug)
-  ansible.builtin.debug:
-    var: pwshprofile.stdout
+    - name: Log installation errors if failed
+      ansible.builtin.debug:
+        msg: "Installation failed with stdout: {{ art_install.stdout }} and stderr: {{ art_install.stderr }}"
+      when: art_install.failed
 
-- name: Add Invoke-AtomicRedTeam to the powershell profile
-  ansible.builtin.lineinfile:
-    path: "{{ pwshprofile.stdout }}"
-    state: present
-    regex: '.*Invoke-AtomicRedTeam.*'
-    line: |
-      Import-Module "{{ ansible_user_dir }}/AtomicRedTeam/invoke-atomicredteam/Invoke-AtomicRedTeam.psd1" -Force
-    owner: "{{ ansible_user_id }}"
-    group: "{{ ansible_user_id }}"
-    mode: '0644'
-    create: true
+    - name: Configure PowerShell profile with Invoke-AtomicRedTeam
+      block:
+        - name: Get PowerShell profile path
+          ansible.builtin.shell:
+            cmd: |
+              $PROFILE.AllUsersAllHosts
+            executable: pwsh
+          register: pwshprofile
+          changed_when: false
+
+        - name: Update PowerShell profile to import AtomicRedTeam module
+          ansible.builtin.lineinfile:
+            path: "{{ pwshprofile.stdout }}"
+            state: present
+            regex: '.*Invoke-AtomicRedTeam.*'
+            line: "Import-Module '{{ ansible_user_dir }}/AtomicRedTeam/invoke-atomicredteam/Invoke-AtomicRedTeam.psd1' -Force"
+            owner: "{{ ansible_user_id }}"
+            group: "{{ ansible_user_id }}"
+            mode: '0644'
+            create: true
